Fix hidden add image button on ios
This is maybe a flexbox bug in safari on ios?
Not using flexbox fixes it.
Changes:

  - Remove flexbox css targeting app-edit-images
  - Set height of app-edit-images to 100% of page

--- a/src/app/modules/registration/components/edit-images/edit-images.page.scss
+++ b/src/app/modules/registration/components/edit-images/edit-images.page.scss
@@ -1,6 +1,4 @@
 app-edit-images {
   overflow: auto;
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
+  height: 100%;
 }
